# team-devoops

./: .gitignore  CONTRIBUTING.md  README.md  compose.yml  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: build_application.yml  cd_kubernetes.yml  ci.yml  ci_cd.yml  deploy-aws.yml  deploy_application.yml  docker_build.yml  genai_tests.yml  integration_tests.yml  java_tests.yml  kubernetes_deploy.yml  (+3 more)
api/: openapi.yaml
client/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  cypress.config.ts  entrypoint.sh  env.example  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
deployment/: README.md  compose.aws.yml  compose.yml
docs/: Component Diagram.json  Component_Diagram.json  Meet@Mensa_UML_Class.json  Meet@Mensa_UML_use_case.json  api.html  ci-cd.md  grading_table.md  meetatmensa_uml_class.json  problem_statement.md
genai/: Dockerfile  README.md  pyproject.toml
integration-tests/: conftest.py  test_demo_match.py  test_get_matches.py  test_get_user_profile.py  test_matching_api.py  test_submit_request.py  test_update_user_preferences.py  test_user_api.py
prometheus/: alerts.yml  prometheus.yml
promtail/: promtail.yml
server/genai/: Dockerfile  README.md  pyproject.toml  requirements.txt
server/genai/service/: config.py  llm_client.py  main.py  prompt_builder.py  schemas.py
server/genai/src/conversation_starter/: main.py
server/genai/test/: test_service.py
(+603 files in other folders)
