[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "conversation_starter"
version = "0.1"
description = "Provides a GenAI model to help Meet@Mensa users start conversations"
requires-python = ">=3.10"
dependencies = [
    "prometheus_client = *",
]

[project.scripts]
meetatmensa-start-genai = "conversation_starter.main:start_genai"

[project.urls]
project = "https://github.com/AET-DevOps25/team-devoops"